Changes
=======

1.0.7 (TBD)
-----------

Bug fixes:

- Filling the empty regions of boundless reads was too slow in some cases and
  a faster solution has been found (#1480).
- Require cligj>=0.5 for compatibility with click 7.0.
- Precisely specify CLI option and argument names for click 6.x and 7.0
  compatibility.

1.0.6 (2018-09-24)
------------------

Bug fixes:

- If the build_overviews method of a dataset is passed a list of factors that
  specify more than one 1x1 pixel overview (#1333), Rasterio raises an
  exception.
- Calling calculate_default_transform for large extents should no longer result
  in the out of memory error reported in #1131. The rio-warp command should
  also now run more quickly and with a smaller memory footprint.
- We have a more general fix for the problem of filling the empty regions of
  boundless reads (#1471).

1.0.5 (2018-09-19)
------------------

Bug fixes:

- The fill value for boundless reads was ignored in Rasterio versions 1-1.0.4
  but now applies (#1471).
- An invalid shortcut has been eliminated and Rasterio now produces a proper
  mask in the boundless masked read case (#1449).
- Loss of a row or column in geometry_window() and mask() has been fixed
  (#1472).

1.0.4 (2018-09-17)
------------------

Bug fixes:

- Boundless reads of datasets without a coordinate reference system have been
  fixed (#1448).
- A y-directional error in disjoint_bounds (#1459) has been fixed.
- Prevent geometries from being thrown near projection singularities (#1446).
- Missing --aws-no-sign-requests and --aws-requester-pays options added to
  the main rio command (#1460).
- Add missing bilinear, cubic spline, lanczos resampling modes for overviews
  (#1457).
- Raise ValueError if get_writer_for_driver() is called without a driver
  name.
- Windows are now frozen so that they are hashable (#1452).

Refactoring:

- Use of InMemoryRaster eliminates redundant code in the _warp module (#1427,
  #816).